Added the "Next Steps" section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         text-align: center;
         align-content: center;
     }
+
+
     #whatHCP {
         color: white;
         background-color: green;
@@ -114,6 +116,13 @@
             </p>
         </div>
         
+    </div>
+
+    <div id="nextSteps">
+        <h2>Next Steps</h2>
+        <p>
+            In a future update, I intend to add features to sort golfers by category when exporting the spreadsheet, change the admin password, and potentially store and retrieve the data in a more efficient way. Since starting my University studies, I have realized in hindsight how I could have simplified and optimized my searching algorithm. The program also has some room for design improvement in the displays for a golfer's past games and the leaderboard for all golfers. I would also like to make the program more adaptable so it might be portable enough to work for other golf courses.
+        </p>
     </div>
     
 
